# youtube_publisher_ros

./: readme.md
youtube_publisher_ros1/: CMakeLists.txt  package.xml
youtube_publisher_ros1/scripts/: youtube_publisher_node.py
youtube_publisher_ros2/: package.xml  readme.md  setup.cfg  setup.py
youtube_publisher_ros2/launch/: youtube_publisher_launch.py
youtube_publisher_ros2/youtube_publisher_ros2/: youtube_publisher_node.py
