<?xml version="1.0"?>
<package format="3">
  <name>youtube_publisher_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 package that publishes video frames from a YouTube link.</description>
  <maintainer email="pfilntisis@athenarc.gr">Panagiotis Filntisis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
